// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    class="card"
    role="region"
  />
</DocumentFragment>
`;

exports[`<Card /> spec renders with additional props and children 1`] = `
<DocumentFragment>
  <div
    class="card border"
    role="region"
  >
    <div
      class="body"
    >
      <div
        aria-level="2"
        class="heading-m"
        role="heading"
      >
        Foo
      </div>
      <div
        class="text"
      >
        Bar
      </div>
    </div>
    Baz
  </div>
</DocumentFragment>
`;
